--- a/cursosAlura.html
+++ b/cursosAlura.html
@@ -8,7 +8,7 @@
      <ul>
          <li> Vagrant: Generando maquinas virtuales </li>
          <li> Docker: creando containers sin dolor de cabeza </li>
-         <li> Ansible </li>
+         <li> Ansible: Su Infraestructura como codigo </li>
          <li> Integración Continua: Madurez y productividad en el Desarrollo de Software </li>
          <li> Kubernetes: introducción a la orquestación de containers</li>
      </ul>
