--- a/cursosAlura.html
+++ b/cursosAlura.html
@@ -11,6 +11,7 @@
          <li> Ansible: Su Infraestructura como codigo </li>
          <li> Integración Continua: Madurez y productividad en el Desarrollo de Software </li>
          <li> Kubernetes: introducción a la orquestación de containers</li>
+         <li> Lista nueva</li>
      </ul>
 </body>
 </html>
